tests/macro-build-tests/pdcstr-compile-fail.other.stderr
error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:3:26
  |
3 |     netcorehost::pdcstr!("\0");
  |                          ^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:4:26
  |
4 |     netcorehost::pdcstr!("somerandomteststring\0");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:5:26
  |
5 |     netcorehost::pdcstr!("somerandomteststring\0somerandomteststring");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:6:26
  |
6 |     netcorehost::pdcstr!("somerandomteststring\0somerandomteststring");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
